# granola-lite

./: .coveragerc  .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  alembic.ini  api_main.py  database_design.md  minimal_main.py  pyproject.toml  pytest.ini  requirements.txt  simple_main.py  start.py  test_basic.py
alembic/: env.py
app/: cli.py  config.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: ai_enhancement.py  ai_service.py  audio.py  auth.py  cache.py  conversations.py  data_management.py  files.py  meetings.py  monitoring.py  notes.py  performance.py  security.py  tasks.py  templates.py  transcriptions.py  websocket.py
app/core/: __init__.py  ai_tasks.py  api_docs.py  async_optimizer.py  audio_tasks.py  auth.py  backup.py  cache.py  celery_app.py  data_cache.py  data_export.py  data_import.py  events.py  exceptions.py  file_tasks.py  health.py  logging.py  logging_system.py  maintenance_tasks.py  middleware.py  migration.py  monitoring.py  notification_tasks.py  optimized_queries.py  performance.py  security.py  security_middleware.py  simple_tasks.py  storage.py  tasks.py  websocket.py
app/db/: base.py  database.py  init_db.py  session.py
app/models/: __init__.py  audio_file.py  conversation.py  meeting.py  note.py  template.py  transcription.py  user.py
app/schemas/: ai_enhancement.py  conversation.py  meeting.py  note.py  template.py  transcription.py  user.py
app/services/: ai_enhancement.py  audio.py  conversation.py  meeting.py  note.py  template.py  transcription.py
app/services/ai/: __init__.py  ai_service.py  anthropic_provider.py  base.py  manager.py  openai_provider.py
app/tasks/: __init__.py  transcription.py
app/tests/: conftest.py  test_api.py  test_auth.py  test_integration.py  test_models.py  test_performance.py  test_security.py
app/utils/: __init__.py  audio_utils.py  file_utils.py
docs/: proxy-setup.md
frontend/: .dockerignore  Dockerfile  jest.config.js  lighthouserc.js  next.config.ts  package.json
frontend/.github/workflows/: ci.yml
frontend/public/: manifest.json  sw.js
frontend/scripts/: analyze-bundle.js  deploy.sh
frontend/src/: test-setup.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/export/: page.tsx
frontend/src/app/live/: page.tsx
frontend/src/app/meetings/: page.tsx
frontend/src/app/notes/: page.tsx
frontend/src/app/offline/: page.tsx
frontend/src/app/performance/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/templates/: page.tsx
frontend/src/app/test-api/: page.tsx
frontend/src/components/: NoSSR.tsx
frontend/src/components/__tests__/: Layout.test.tsx
frontend/src/components/ai/: AIEnhancementPanel.tsx
frontend/src/components/audio/: AudioRecorder.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/editor/: RichTextEditor.tsx
frontend/src/components/export/: BatchExportDialog.tsx  ExportDialog.tsx  ExportUtils.tsx
frontend/src/components/layout/: AppSidebar.tsx  Header.tsx  Layout.tsx
frontend/src/components/offline/: CacheManager.tsx  OfflineIndicator.tsx
frontend/src/components/performance/: CodeSplitting.tsx  LazyImage.tsx  PerformanceMonitor.tsx
frontend/src/components/pwa/: InstallPrompt.tsx
frontend/src/components/search/: GlobalSearch.tsx  SearchAnalytics.tsx  SearchFilters.tsx  SearchInput.tsx  SearchResults.tsx
frontend/src/components/templates/: TemplateEditor.tsx
frontend/src/components/transcription/: RealTimeTranscription.tsx
frontend/src/hooks/: use-performance.ts  useDebounce.ts
frontend/src/types/: index.ts
tests/: README.md  __init__.py  final_test.py  run_all_tests.py  test_integration.py  test_proxy_config.py
(+4 files in other folders)
